@@ -1,3 +1,9 @@
+2011-10-18  Aleksandar Ristovski  <aristovski@qnx.com>
+
+	* solib-svr4.c (read_program_header): New variables pt_phdr, pt_phdr_p,
+	initialize them from target PT_PHDR p_vaddr, relocate sect_addr by
+	pt_phdr if PT_PHDR was found.
+
 2011-10-17  Joost van der Sluis  <joost@cnoc.nl>
 
 	* gdbtypes.h: Added TYPE_SAFE_NAME macro to get the name of a
